# stock_prediction

./: .gitignore  AUTHORS.rst  LICENSE  Makefile  README.md  explain_ai_exp.py  fast_quant_trial.py  investing.py  pycaret_trial.py  pyproject.toml  quant_v1.py  quick_start.sh  requirements.txt  search_stock.py  setup.cfg  setup.py  t.py  yellow_brick_trial.py
.github/workflows/: codeql-analysis.yml
collab/: 01 stock market data download.ipynb  02 online news extraction .ipynb  03 text processing and sentiment analysis of online news.ipynb  04 data wrangling.ipynb  05 modeling with LSTM .ipynb  AxisBankLSTM-checkpoint.ipynb  LSTM-checkpoint.ipynb  apple_stock.ipynb  pycaret_trial.ipynb  stock_predictions_multiples.ipynb
collab/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
collab/catboost_info/learn/: events.out.tfevents
data_storage/feature_impact/: AR2CQFSFVS.csv
data_storage/feature_importance/: WHFT5YB3CV.csv
data_storage/filtered_df/: N4G21SV77I.csv  WHFT5YB3CV.csv  dictionary_bkp.csv
data_storage/summary_plot/: N4G21SV77I.csv
data_storage/user/: user_id.csv
stock_predictions/: DSTP_RNN.py  __init__.py  apple_stock.py  base.py  data_utils.py  logger.py  main.py  model_rnn.py  rnn_model.py  search_stock.py  stock_prediction.py  utils.py  v1.py  v2.py
stock_predictions/web/: blue_categories.txt  stock_symbols.txt  stocks.py  template.py
