[tool.poetry]
name = "stock_predictions"
version = "0.1.0"
description = "stock predications based on LSTM model"
authors = ["abakhru <bakhru@me.com>"]

[tool.poetry.dependencies]
python = ">3.12"
bump2version = "*"
watchdog = "*"
coverage = "*"
twine = "*"
click = "*"
yfinance = "*"
pandas-datareader = "*"
keras = "*"
pydot = "*"
graphviz = "*"
alpha-vantage = "*"
matplotlib = "*"
arrow = "*"
#tensorflow = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
